--- a/src/assets/styles/componentes/Home/Home.scss
+++ b/src/assets/styles/componentes/Home/Home.scss
@@ -20,7 +20,7 @@
     }
 
     &--separation {
-      margin-top: 60px;
+      margin-top: 80px;
     }
   }
 }
